--- a/public/templates/trello/style.css
+++ b/public/templates/trello/style.css
@@ -8,10 +8,19 @@ ul {
     list-style: none;
 }
 .box {
+    max-width: 300px;
+    overflow: auto;
     height: 100%;
     border: 1px solid #ccc;
     background-color: #fff;
 }
+.box li{
+    overflow: auto;
+    height: 100%;
+    border: 1px solid #ccc;
+    background-color: #fff;
+}
+
 .box-header {
     background-color: #eee;
     padding: 0 30px 0 10px;
@@ -32,6 +41,10 @@ ul {
     cursor: pointer;
     position: absolute;
 }
+.cards{
+    padding-left: 0px;
+}
+
 a {
     color: #ccc;
 }
@@ -43,13 +56,4 @@ form {
 }
 .gridster-item {
     z-index: initial;
-}
-.card
-{
-	width: 90%;
-	border: solid 1px #b9b9b9;
-	border-radius: 3px;
-	font-weight: 200;
-	list-style: none;
-	padding: 6px 8px 5px 10px;
 }
