--- a/public/templates/trello/view.html
+++ b/public/templates/trello/view.html
@@ -16,20 +16,20 @@
                     </div>
                     <div class="box-content">
                         <ul class="connectedSortable" ui-sortable="sortableTemplates" sortable ng-model="widget.cards">
-                            <li class="card" ng-repeat="card in widget.cards">
+                            <li class="card" ng-click="onCardClick()" ng-repeat="card in widget.cards">
                                 <img class="thumb" ng-src="{{card.thumb}}" />
                                 <p>
                                     {{card.name}}
                                 </p>
 
                                 <div id="overlay">
-                                    <img id="loading" src="http://bit.ly/pMtW1K">
+                                    <img id="loading" src="http://bit.ly/pMtW1K ">
                                     </img>
                                 </div>
                             </li>
-                            <li ng-show="widget.cards.length===0">&nbsp;</li>
+                            <li ng-show="widget.cards.length===0 ">&nbsp;</li>
                         </ul>
-                        <a class="pull-right btn btn-primary" ng-click="addCard(widget)"><i class="glyphicon glyphicon-plus"></i> Add Card</a>
+                        <a class="pull-right btn btn-primary " ng-click="addCard(widget) "><i class="glyphicon glyphicon-plus "></i> Add Card</a>
                     </div>
                 </div>
             </li>
