--- a/public/templates/trello/view.html
+++ b/public/templates/trello/view.html
@@ -19,7 +19,7 @@
                             <li class="card" ng-click="editCard(widget, card)" ng-repeat="card in widget.cards">
                                 <img class="thumb" ng-src="{{card.thumb}}" />
                                 <p>
-                                    {{card.title}}
+                                    {{card.desc}}
                                 </p>
 
                                 <div id="overlay">
