--- a/public/templates/trello/edit_card.html
+++ b/public/templates/trello/edit_card.html
@@ -28,8 +28,19 @@
                             <a style="float: right;">Delete....</a>
                         </div>
                         <progressbar animate="false" value="20" type="success"><b>20%</b></progressbar>
-                        <div style="margin-top: 10px;">
-                            
+                        <div class="task-component">
+                            <div class="task-type"></div>
+                            <h3 class="task-name">Task name putting here..</h3>
+                            <div class="pull-right task-img">
+                                <img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" alt="">
+                            </div>
+                        </div>
+                        <div class="task-component">
+                            <div class="task-type"></div>
+                            <h3 class="task-name">Task name putting here..</h3>
+                            <div class="pull-right task-img">
+                                <img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
