--- a/public/templates/trello/style.css
+++ b/public/templates/trello/style.css
@@ -82,3 +82,32 @@ form {
 .backdrop-fix {
     height: 100%;
 }
+
+.animate-show {
+  -webkit-transition:all linear 2.5s;
+  -moz-transition:all linear 2.5s;
+  -o-transition:all linear 2.5s;
+  transition:all linear 2.5s;
+  line-height:20px;
+  opacity:1;
+  padding:10px;
+  border:1px solid black;
+  background:white;
+}
+
+.animate-show.ng-hide-add,
+.animate-show.ng-hide-remove {
+  display: block !important;
+}
+
+.animate-show.ng-hide {
+  line-height:0;
+  opacity:0;
+  padding:0 10px;
+}
+
+.check-element {
+  padding: 10px;
+  border: 1px solid black;
+  background:white;
+}
