adding header for trello page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,3 +56,10 @@ input {
 .task-img img{
     max-width: 31px;
 }
+.navbar-nav{
+    width: 100%;
+}
+.project-name,.project-hours{
+    padding: 16px;
+    color: #fff;
+}
