UI shows redmine real tasks

--- a/public/templates/trello/view.html
+++ b/public/templates/trello/view.html
@@ -22,7 +22,7 @@
                             <li class="card" ng-click="editCard(widget, card)" ng-repeat="card in widget.cards">
                                 <img class="thumb" ng-src="{{card.thumb}}" />
                                 <p>
-                                    {{card.desc}}
+                                    User Story ID: {{card.id}}
                                 </p>
 
                                 <div id="overlay">
