--- a/public/templates/trello/create_issue.html
+++ b/public/templates/trello/create_issue.html
@@ -1,11 +1,9 @@
 <div>
-    <form editable-form name="_form" class="form-horizontal" ng-submit="submit(_form)">
+    <form name="_form" class="form-horizontal" ng-submit="submit(_form)">
         <div class="modal-header">
             <button type="button" class="close" ng-click="dismiss()" aria-hidden="true">&times;</button>
             <i class="fa fa-desktop fa-4" style="float: left;margin-right: 10px;margin-top: 9px;"></i>
-            <!-- <h5 style="float: left;margin-right: 5px;">  {{card.title}}</h5> -->
-            <span inline="card.title"></span>
-            <h6> in list <b>{{widget.title}}</b></h6>
+            <h6> Create a New User Story</b></h6>
         </div>
 
         <div class="modal-body">
