Add Dummy US Cover

--- a/public/templates/trello/view.html
+++ b/public/templates/trello/view.html
@@ -20,7 +20,7 @@
                     <div class="box-content">
                         <ul class="connectedSortable" ui-sortable="sortableTemplates" sortable ng-model="widget.cards" widget-status="{{widget.status_id}}">
                             <li class="card" ng-click="editCard(widget, card)" ng-repeat="card in widget.cards" id="{{card.id}}">
-                                <img class="thumb" ng-src="{{card.thumb}}" />
+                                <img class="thumb" ng-src="http://blog.no-panic.at/wp-content/uploads/2011/04/redmine_logo_v1.png" />
                                 <p>
                                     {{card.subject}}
                                 </p>
