[add] calculate progress precentage in card view

--- a/public/templates/trello/edit_card.html
+++ b/public/templates/trello/edit_card.html
@@ -34,7 +34,7 @@
                         <div>
                             <i class="fa fa-tasks">  Tasks</i>
                         </div>
-                        <progressbar animate="false" value="20" type="success"><b>20%</b></progressbar>
+                        <progressbar animate="false" value="20" type="success"><b>{{progress}}%</b></progressbar>
                         <div style="margin-top: 10px;">
                             <table>
                                 <tr ng-repeat="task in card.tasks">
