--- a/public/templates/trello/edit_card.html
+++ b/public/templates/trello/edit_card.html
@@ -44,7 +44,7 @@
                             </table>
                             <div ng-repeat="task in subTasks  track by $index" class="task-component">
                                 <div class="task-type"></div>
-                                <input type="checkbox" ng-click="changeTaskStatus(task.id, status_val)" ng-model="status_val" ng-checked="task.status.id == 14"><h3 class="task-name">{{task.subject}}</h3>
+                                <input type="checkbox" ng-click="changeTaskStatus(task.id, status_val)" ng-model="status_val" ng-checked="task.status.id == 14"><h3 class="task-name"><a ng-href="http://{{config.host}}/issues/{{task.id}}" target="_blank">{{task.subject}}</h3></a>
                                 <div class="pull-right task-img">
                                     <img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" alt="">
                                 </div>
