[fix] remove newTask name from editable text

--- a/public/templates/trello/edit_card.html
+++ b/public/templates/trello/edit_card.html
@@ -49,7 +49,7 @@
                                     <img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" alt="">
                                 </div>
                             </div>
-                            <a href="#" onaftersave="createNewTask()" editable-text="newTask.subject" >{{ newTask.subject || 'Add a task'}}</a>
+                            <a href="#" onaftersave="createNewTask()" editable-text="newTask.subject" > Add a task</a>
                         </div>
                     </div>
                 </div>
