[add] delete task

--- a/public/templates/trello/edit_card.html
+++ b/public/templates/trello/edit_card.html
@@ -49,6 +49,9 @@
                                     <a ng-click="textBtnForm.$show()" ng-hide="textBtnForm.$visible">
                                         <i class="fa fa-edit"></i> edit
                                     </a>
+                                    <a confirmed-click="deleteTask(task)" ng-confirm-click="Are you sure about deleting this task?">
+                                        <i class="fa fa-remove"></i>
+                                    </a>
                                 <div class="pull-right task-img">
                                     <img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" alt="">
                                 </div>
