[add] member image inside task

--- a/public/templates/trello/edit_card.html
+++ b/public/templates/trello/edit_card.html
@@ -53,7 +53,8 @@
                                         <i class="fa fa-remove"></i>
                                     </a>
                                 <div class="pull-right task-img">
-                                    <img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" alt="">
+                                     <img class="us-member member" title="{{task.assigned_to.firstname}} {{task.assigned_to.lastname}}"
+                                     gravatar-src="'{{task.assigned_to.mail}}'" gravatar-size="100" />
                                 </div>
                             </div>
                             <a href="#" onaftersave="createNewTask()" editable-text="newTask.subject" > Add a task</a>
