--- a/public/views/index.html
+++ b/public/views/index.html
@@ -39,7 +39,7 @@
     <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="../bower_components/ngstorage/ngStorage.js"></script>
 
-    <script src="app.js"></script>
+    <script src="../js/app.js"></script>
     <script src="views/templates/script.js"></script>
 </head>
 
