--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -40,7 +39,14 @@
     <script src="../bower_components/ngstorage/ngStorage.js"></script>
 
     <script src="../js/app.js"></script>
-    <script src="views/templates/script.js"></script>
+    <script src="../js/filters/filters.js"></script>
+    <script src="../js/directives/directives.js"></script>
+    <script src="../js/services/redmineService.js"></script>
+    <script src="../js/controllers/authController.js"></script>
+    <script src="../js/controllers/dashboardController.js"></script>
+    <script src="../js/controllers/customWidgetController.js"></script>
+    <script src="../js/controllers/widgetSettingsController.js"></script>
+    <script src="../js/controllers/crudCardController.js"></script>
 </head>
 
 <body ng-app="trelloRedmine">
