--- a/public/views/index.html
+++ b/public/views/index.html
@@ -39,14 +39,14 @@
     <script src="../bower_components/ngstorage/ngStorage.js"></script>
 
     <script src="../js/app.js"></script>
-    <script src="../js/filters/filters.js"></script>
-    <script src="../js/directives/directives.js"></script>
-    <script src="../js/services/redmineService.js"></script>
-    <script src="../js/controllers/authController.js"></script>
-    <script src="../js/controllers/dashboardController.js"></script>
-    <script src="../js/controllers/customWidgetController.js"></script>
-    <script src="../js/controllers/widgetSettingsController.js"></script>
-    <script src="../js/controllers/crudCardController.js"></script>
+    <script src="../js/filters/main.js"></script>
+    <script src="../js/directives/main.js"></script>
+    <script src="../js/services/redmine.js"></script>
+    <script src="../js/controllers/auth.js"></script>
+    <script src="../js/controllers/dashboard.js"></script>
+    <script src="../js/controllers/custom_widget.js"></script>
+    <script src="../js/controllers/widget_settings.js"></script>
+    <script src="../js/controllers/crud_card.js"></script>
 </head>
 
 <body ng-app="trelloRedmine">
